# munin-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  INSTALL.md  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
docs/architecture/: context-strangler-migration.md  runtime-context-ownership.md
docs/production-readiness/: munin-planning-doc-inventory-unique.csv  munin-planning-doc-inventory.csv  production-readiness-audit-2026-04-19.md
docs/release/: v0.5.0-beta.2.md  v0.5.0-beta.3.md  v0.5.7.md
scripts/: munin-release-check.ps1
src/: lib.rs  proactivity_cmd.rs  strategy_cmd.rs
src/analytics/: README.md  claims_cmd.rs  memory_os_cmd.rs  mod.rs  session_backfill.rs  session_impact_cmd.rs
src/assets/integrations/v1/: manifest.json
src/assets/skills/munin-strategy/: SKILL.md
src/core/: README.md  artifacts.rs  config.rs  constants.rs  memory_hygiene.rs  memory_os.rs  mod.rs  proactivity.rs  resolver.rs  strategy.rs  tee.rs  telemetry.rs  tracking.rs  utils.rs  worldview.rs
src/core/access_layer/: intent_rules.rs  mod.rs
src/core/tracking/: action_policy.rs  approval_jobs.rs  checkpoint.rs  claim_leases.rs  evidence.rs  gain_rollups.rs  journal.rs  kernel.rs  parse_failures.rs  policy_model.rs  promotion_gate.rs  read_model.rs  recall.rs  reports.rs  signals.rs  trust.rs
src/rewrite_engine/: detector.rs  mod.rs
src/runtime_context/: mod.rs
src/session_brain/: build.rs  evidence.rs  guidance.rs  messages.rs  mod.rs  project.rs  strategy.rs  types.rs  user.rs
src/session_intelligence/: mod.rs  provider.rs
tests/: cli_contract.rs  package_contract.rs  resolver_triggers.rs  website_command_parity.rs
tests/fixtures/dotnet/: build_failed.txt  test_failed.txt
tests/fixtures/replay_eval/adversarial_private/: blocker-201.json  case-201.json  forbidden-201.json  next-action-201.json  objective-201.json  open-loop-201.json  visible-state-201.json
tests/fixtures/replay_eval/dev_public/: blocker-001.json  blocker-002.json  blocker-003.json  blocker-004.json  case-001.json  case-002.json  case-003.json  case-004.json  forbidden-001.json  forbidden-002.json  forbidden-003.json  forbidden-004.json  next-action-001.json  next-action-002.json  (+14 more)
tests/fixtures/resolver_triggers/: brain.json  doctor.json  friction.json  hygiene.json  nudge.json  prove.json  recall.json  resume.json
tests/fixtures/session_brain/: claude-transcript.jsonl  codex-transcript.jsonl
tests/golden/: munin_friction_skill.md
(+23 files in other folders)
