[package]
name = "munin-memory"
version = "0.5.1-beta-2"
edition = "2021"
autobins = false
authors = ["John McKeown"]
description = "Local memory system for agent-driven development"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://muninmemory.com"
repository = "https://github.com/inchwormz/munin"
keywords = ["cli", "llm", "memory", "agents", "productivity"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
"/LICENSE",
"/NOTICE",
"/CONTRIBUTING.md",
"/CODE_OF_CONDUCT.md",
"/README.md",
    "/build.rs",
    "/src/lib.rs",
    "/src/bin/munin.rs",
    "/src/analytics/mod.rs",
    "/src/analytics/claims_cmd.rs",
    "/src/analytics/memory_os_cmd.rs",
    "/src/analytics/session_backfill.rs",
    "/src/analytics/session_impact_cmd.rs",
    "/src/core/access_layer/**",
    "/src/core/artifacts.rs",
    "/src/core/config.rs",
    "/src/core/constants.rs",
    "/src/core/filter.rs",
    "/src/core/memory_hygiene.rs",
    "/src/core/memory_os.rs",
    "/src/core/mod.rs",
    "/src/core/resolver.rs",
    "/src/core/strategy.rs",
    "/src/core/tee.rs",
    "/src/core/telemetry.rs",
    "/src/core/tracking.rs",
    "/src/core/tracking/**",
    "/src/core/utils.rs",
    "/src/core/worldview.rs",
    "/src/rewrite_engine/detector.rs",
    "/src/rewrite_engine/mod.rs",
    "/src/session_brain/**",
    "/src/session_intelligence/mod.rs",
    "/src/session_intelligence/provider.rs",
    "/src/strategy_cmd.rs",
    "/tests/cli_contract.rs",
    "/tests/fixtures/**",
    "/tests/package_contract.rs",
    "/tests/resolver_triggers.rs",
    "/tests/website_command_parity.rs",
]

[[bin]]
name = "munin"
path = "src/bin/munin.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
walkdir = "2"
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
colored = "2"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
chrono = "0.4"
tempfile = "3"
sha2 = "0.10"
ureq = "2"
hostname = "0.4"
getrandom = "0.4"
flate2 = "1.0"
quick-xml = "0.37"
which = "8"
automod = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
